--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
 
             <div class="copy_right_footer">
-              Developed by - Khanak Saini
+              Developed by - Shreyasee
             </div>
           </center>
 
